--- a/Prototyping/protoBuf/customExample/protoBufTester.ipynb
+++ b/Prototyping/protoBuf/customExample/protoBufTester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "id": "d45637ec",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 18,
    "id": "142f5937",
    "metadata": {},
    "outputs": [],
@@ -21,13 +21,13 @@
     "#we defined a specific message in our protoBuffer called \"data\", now we populate our message with data\n",
     "pbSend = pb.data()\n",
     "pbSend.id = 123455\n",
-    "#pbSend.text = \"test\"\n",
-    "#pbSend.decimal = 2.34"
+    "pbSend.name = \"test\"\n",
+    "pbSend.decimal = 2.34"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "id": "52c1d395",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 20,
    "id": "0f5e0f2b",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'\\x08\\xbf\\xc4\\x07'\n",
+      "b'\\x08\\xbf\\xc4\\x07\\x12\\x04test\\x1d\\x8f\\xc2\\x15@'\n",
       "<class 'bytes'>\n"
      ]
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 21,
    "id": "3cc3f473",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 22,
    "id": "f187b8a8",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 23,
    "id": "35c3ae67",
    "metadata": {},
    "outputs": [
@@ -104,20 +104,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "123455\n"
+      "123455\n",
+      "test\n",
+      "2.3399999141693115\n"
      ]
     }
    ],
    "source": [
     "#access each of the members!\n",
     "print(pbRecieve.id)\n",
-    "#print(pbRecieve.text)\n",
-    "#print(pbRecieve.decimal)"
+    "print(pbRecieve.name)\n",
+    "print(pbRecieve.decimal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 24,
    "id": "fa300c16",
    "metadata": {},
    "outputs": [
@@ -125,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 bytes\n"
+      "15 bytes\n"
      ]
     }
    ],
@@ -133,6 +135,14 @@
     "#message length:\n",
     "print(str(length) + ' bytes')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b3ba451",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
